[WEB] Fix SScreen + Usersite (#46)
* [WEB] Links /web/

* [WEB] Fix links (again)

* [WEB] Fix links

TRY AGAIN

* [WEB]

* [WEB] Maybe fixed links ¯\_(ツ)_/¯

 ¯\_(ツ)_/¯
 ¯\_(ツ)_/¯
 ¯\_(ツ)_/¯
 ¯\_(ツ)_/¯
 ¯\_(ツ)_/¯
 ¯\_(ツ)_/¯

* Avec le /web c'est mieux

* add gitignore .DS_Store

* Removed DS_Store

dedi à Loïc

* [WEB] Links on staticscreen

* [WEB] Fix CSS for mobile

* [WEB] Put back charts credits

* [WEB] Fix scrollbar mobile

* [WEB] /web

* Revert "Merge branch 'Interface' into Interface_WEB"

This reverts commit ffb59ee6ef99a6e0e5b9c3425ef01559a7ae4985, reversing
changes made to 5383f560168ab2cd7bb016a661d1eb7dd80a3720.

* Revert

* Oups

* [WEB] Css countdown page

* [WEB] Css wallframe SScreen

* [WEB] StaticScreen + Mobile

-New rolling frame function
-New rolling slideshow function
-Style fixed for wall frame
-New effect for rolling frame
-New effect for rolling slideshow

-Fix scrollbar on mobiles
-Filling forms will not zoom in on iPhones/iPad

-New css for countdownpage

* [WEB] /web

oups

* Revert "[WEB] Fix scrollbar mobile (#37)"

This reverts commit 17bcc90ab59d7cb48d4b4d981728194f0aef4edf.

* clean

* [WEB] Staticscreen + Mobile

-New rolling frame function
-New rolling slideshow function
-Style fixed for wall frame
-New effect for rolling frame
-New effect for rolling slideshow

-Fix scrollbar on mobiles
-Filling forms will not zoom in on iPhones/iPad

-New css for countdownpage

-News CSS for all staticscreen

* [WEB] /web

* [WEB] Staticscreen + Usersite

* /web

* Update Medias.cshtml

--- a/Interface/WEB/Mur_Vegetal/wwwroot/css/usersite/homepage.css
+++ b/Interface/WEB/Mur_Vegetal/wwwroot/css/usersite/homepage.css
@@ -84,6 +84,13 @@ News box
     color: #629460;
 }
 
+.news-text {
+    overflow-wrap: normal;
+    align-content: center;
+    padding: 10px;
+    width: 70%;
+}
+
 
 /* -------------------------------------------
 Countdown box  
@@ -102,7 +109,6 @@ Countdown box
     overflow-wrap: normal;
     align-content: center;
     padding: 5px;
-    border-radius: 10px;
     text-transform: uppercase;
 }
 
